# rag-agent-showcase

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  verify.py
.github/workflows/: test.yml
app/: main.py
docs/: evaluation-report.md
docs/adr/: 0001-模型后端选型.md  0002-chunking策略选型.md  0003-弃用LangServe.md  0004-进阶检索选HyDE.md
evals/: qa_pairs.json
src/rag_agent/: __init__.py  chain.py  config.py  eval.py  indexing.py  models.py  retrieval.py
tests/: test_app.py  test_chain.py  test_config.py  test_eval.py  test_indexing.py  test_models.py  test_retrieval.py
